# mdd-ui

./: .gitignore  CODE_REVIEW.md  Cargo.toml  LICENSE  README.md  REUSE.toml  clippy.toml  code-review.md  config.example.toml  deny.toml  todo.md
.github/: copilot-instructions.md
.github/workflows/: build.yml  pr-checks.yml  pre-commit.yaml
.reuse/templates/: mdd_ui.jinja2
img/: demo.gif.license
src/: database.rs  main.rs
src/app/: clipboard.rs  column_widths.rs  config.rs  cursor.rs  history.rs  input.rs  mod.rs  mouse.rs  navigation.rs  render.rs  search.rs  sort.rs  visibility.rs
src/app/mouse/: areas.rs  clicks.rs  drag.rs  mod.rs
src/app/navigation/: helpers.rs  mod.rs  parameter.rs  parent_ref.rs  service.rs  variant.rs
src/app/render/: composite.rs  detail.rs  mod.rs  popup.rs  table.rs  tabs.rs  tree.rs
src/database/: mod.rs  reader.rs
src/diff/: compare.rs  diff_tree.rs  export.rs  mod.rs  snapshot.rs
src/tree/: builder.rs  layers.rs  mod.rs  types.rs
src/tree/elements/: dtcs.rs  layers.rs  mod.rs
src/tree/elements/variants/: com_params.rs  dops.rs  functional_classes.rs  mod.rs  params.rs  parent_refs.rs  placeholders.rs  requests.rs  responses.rs  sdgs.rs  services.rs  state_charts.rs  tables.rs  unit_spec.rs
src/tree/elements/variants/dops/: dtc_dops.rs  dynamic_length_fields.rs  end_of_pdu.rs  env_data.rs  mod.rs  mux_dops.rs  normal_dops.rs  static_fields.rs  structures.rs
src/tree/elements/variants/services/: details.rs  diag_comms.rs  mod.rs
