[package]
name = "mdd-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
cda-database = { git = "https://github.com/eclipse-opensovd/classic-diagnostic-adapter.git", rev = "2e94da1dfe68e4d335ac732aeaa5cf6eb52eff05" }
cda-interfaces = { git = "https://github.com/eclipse-opensovd/classic-diagnostic-adapter.git", rev = "2e94da1dfe68e4d335ac732aeaa5cf6eb52eff05" }

# TUI
ratatui = "0.30.0"
crossterm = "0.29.0"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"

[patch.crates-io]
flatbuffers = { git = "https://github.com/alexmohr/flatbuffers.git", rev = "0ba3307d" }
