[package]
name = "mdd-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
cda-database = { git = "https://github.com/eclipse-opensovd/classic-diagnostic-adapter.git", rev = "dbaddf1f9d615613b899198277f85400e0b0a91e" }
cda-interfaces = { git = "https://github.com/eclipse-opensovd/classic-diagnostic-adapter.git", rev = "dbaddf1f9d615613b899198277f85400e0b0a91e" }

# TUI
ratatui = "0.30.0"
crossterm = "0.29.0"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"

[patch.crates-io]
flatbuffers = { git = "https://github.com/alexmohr/flatbuffers.git", rev = "0ba3307d" }

[workspace.lints.clippy]
# enable pedantic
pedantic = { level = "warn", priority = -1 }
## exclude some too pedantic lints for now
similar_names = "allow"

# additional lints
clone_on_ref_ptr = "warn"
#indexing_slicing = "deny"
unwrap_used = "deny"
#arithmetic_side_effects = "deny"
separated_literal_suffix = "deny"
